--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,29 +3,14 @@ name: CI
 on:
   push:
     branches:
-      - main
+      - playground
 
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
-      - uses: actions/checkout@v3
+      - uses: rav2040/test-playground-action@main
+        id: one
 
-      - name: Configure github-actions[bot]
-        run: |
-          git config user.name github-actions[bot]
-          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-
-      - name: Install dependencies
-        run: yarn install --immutable
-
-      - name: Build
-        run: yarn build
-
-      - name: Commit build output
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Merge build output [skip-ci]
+      - run: echo ${{ steps.one.outputs.foo }}
