--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,5 @@ jobs:
         id: one
 
       - run: echo ${{ steps.one.outputs.foo }} | jq '.foo'
+
+      - run: echo ${{ fromJSON(steps.one.outputs.foo).foo }}
